# InferSched-Distributed-Inference-Scheduler

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  architecture.html  docker-compose.yml
.github/workflows/: ci.yml  pages.yml
cpp/: CMakeLists.txt
cpp/bench/: CMakeLists.txt  scheduler_bench.cpp
cpp/include/infersched/: version.hpp
cpp/include/infersched/concurrency/: mpsc_ring.hpp  sharded_registry.hpp
cpp/include/infersched/distributed/: engine_service.hpp  router_service.hpp
cpp/include/infersched/durable/: durable_store.hpp  kafka_poller.hpp  offset_tracker.hpp  outbox_relay.hpp  request_ingestor.hpp
cpp/include/infersched/engine/: continuous_engine.hpp  cost_model.hpp  deterministic_engine.hpp  execution_state.hpp  fake_clock.hpp  paged_kv_cache.hpp  prefix_cache.hpp  radix_prefix_cache.hpp  request_queue.hpp  result_cache.hpp  result_cache_key.hpp  static_batch_policy.hpp
cpp/include/infersched/metrics/: histogram.hpp
cpp/src/: continuous_engine.cpp  cost_model.cpp  deterministic_engine.cpp  durable_router_main.cpp  durable_store.cpp  engine_main.cpp  engine_service.cpp  execution_state.cpp  histogram.cpp  kafka_poller.cpp  offset_tracker.cpp  outbox_relay.cpp  p5_client_main.cpp  paged_kv_cache.cpp  prefix_cache.cpp  radix_prefix_cache.cpp  request_ingestor.cpp  request_queue.cpp  result_cache.cpp  result_cache_key.cpp  router_main.cpp  router_service.cpp  static_batch_policy.cpp  version.cpp
cpp/tests/: CMakeLists.txt  concurrency_test.cpp  durable_test.cpp  engine_core_test.cpp  smoke_test.cpp
docs/: benchmarks.md  p4-distributed-execution.md  p5-durable-pipeline.md  p6-multi-router-rebalancing.md  p7-control-plane-observability.md
proto/: infersched.proto
python/: infersched_pb2.py  loadgen.py  requirements.txt
python/infersched_api/: __init__.py  app.py
python/tests/: test_gateway.py
scripts/: p4_crash_recovery.sh  p4_integration.sh  p4_same_engine_retry.sh  p5_end_to_end.sh  p5_restart_recovery.sh  p6_multi_router_chaos.sh  p7_gateway_end_to_end.sh  run_bench.sh  run_p7_distributed_bench.sh
